all templates are successfully merging
